--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,7 +1,18 @@
-<ul>
-  <li *ngFor="let employee of employees | async">
-      {{employee.firstName}} <button class="btn btn-success" (click)="employeeDetails(employee.id)">details</button>
-      <button class="btn btn-danger" (click)="deleteEmployee(employee.id)">X</button>
-     
-  </li>
-</ul>
+<br>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+ <!-- Position Column -->
+ <ng-container matColumnDef="firstName">
+  <th mat-header-cell *matHeaderCellDef> First Name </th>
+  <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+</ng-container>
+<ng-container matColumnDef="actions">
+  <th mat-header-cell *matHeaderCellDef> Actions </th>
+  <td mat-cell *matCellDef="let element"> 
+    <button class="btn btn-success" (click)="employeeDetails(element.id)">details</button>
+    <button class="btn btn-danger" (click)="deleteEmployee(element.id)">X</button> 
+  </td>
+</ng-container>
+
+<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
