--- a/src/app/employee-details/employee-details.component.html
+++ b/src/app/employee-details/employee-details.component.html
@@ -1,4 +1,25 @@
-<ul *ngIf="employee">
-  <li>The user is {{employee.firstName}} {{employee.lastName}} has an email id : {{employee.emailId}}</li>
-  <button class="btn btn-success" [routerLink]="['/update',employee.id]">edit</button>
-</ul>
+<br>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+ <!-- Position Column -->
+ <ng-container matColumnDef="firstName">
+  <th mat-header-cell *matHeaderCellDef> First Name </th>
+  <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+</ng-container>
+<ng-container matColumnDef="lastName">
+  <th mat-header-cell *matHeaderCellDef> Last Name </th>
+  <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+</ng-container>
+<ng-container matColumnDef="emailId">
+  <th mat-header-cell *matHeaderCellDef> Email</th>
+  <td mat-cell *matCellDef="let element"> {{element.emailId}} </td>
+</ng-container>
+<ng-container matColumnDef="actions">
+  <th mat-header-cell *matHeaderCellDef> Actions </th>
+  <td mat-cell *matCellDef="let element"> 
+    <button class="btn btn-success" [routerLink]="['/update',element.id]">edit</button>
+  </td>
+</ng-container> 
+
+<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
